--- a/style.css
+++ b/style.css
@@ -1,31 +1,26 @@
 body {
-  margin: 2em;
-  font-size: 18px;
-  font-family: sans-serif;
-  line-height: 1.3;
-  color: #bbb;
-  background-color: black;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 input {
-  color: #ddd;
-  background-color: black;
+  color: #e8e8e8;
+  background-color: #0a0a0a;
 }
 .button {
-  background-color:#1c2694;
+  background-color:#2e9d2e;
   border-radius:12px;
   border:0;
   cursor:pointer;
   color:#ffffff;
   font-size: 17px;
-  padding:8px 16px;
+  padding:6px 14px;
   text-decoration:none;
 }
 .button:hover {
-  background-color:#2c3faa;
+  background-color:#257225;
 }
-a { color: #4050b0; }
-a:visited { color: #843090; }
-h1,h2,h2 { line-height: 1.1 }
+.processing { background-color: #c88d00 }
+.processing:hover { background-color: #c88d00 }
 .stats { display: inline-block; margin-right: 20px }
 .error { color:#e02020 }
 .stats input { width: 50px }
